Delete Api for category
